compiler/tests/en/errors/toplevel_const_after_var.salam
// EXPECT: E086
x := 1

const N := 2

func main: end
